# RobotVision

./: .gitignore  A-very-brief-Introduction-to-OpenCV.ppt  AssignmentIII.docx  ~$A-very-brief-Introduction-to-OpenCV.ppt  ~$signmentIII.docx
Checkerboard Images/: IMG_2795.HEIC  IMG_2796.HEIC  IMG_2797.HEIC  IMG_2798.HEIC  IMG_2799.HEIC  IMG_2800.HEIC  IMG_2801.HEIC  IMG_2802.HEIC  IMG_2803.HEIC  IMG_2804.HEIC  IMG_2805.HEIC  IMG_2806.HEIC  IMG_2807.HEIC  IMG_2808.HEIC  IMG_2809.HEIC  IMG_2810.HEIC  IMG_2811.HEIC  IMG_2812.HEIC  IMG_2813.HEIC  IMG_2815.HEIC
PartA/Results/: out_camera_data.xml
PartB/: CMakeLists.txt  hw3_b.cpp  main.cpp
RobotVision/: .gitignore
RobotVision/RobotVision/: CMakeLists.txt  Info.plist  default.xml  files.xml  files.yml  main.cpp
RobotVision/RobotVision.xcodeproj/: project.pbxproj
RobotVision/RobotVision.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
RobotVision/RobotVision.xcodeproj/project.xcworkspace/xcuserdata/majko.xcuserdatad/: UserInterfaceState.xcuserstate
RobotVision/RobotVision.xcodeproj/xcuserdata/majko.xcuserdatad/xcschemes/: xcschememanagement.plist
RobotVision_copy/: main.cpp
